force-app/main/default/objects/SVMXA360__SM_TA_TemplateAssociation__c/SVMXA360__SM_TA_TemplateAssociation__c.object-meta.xml
<CustomObject>
    <description>This object stores information about associating specific template to a record based on it&apos;s field value.</description>
    <label>Template Match Value</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Template Match Values</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>