force-app/main/default/objects/SVMXA360__SM_TA_TemplateAssociation__c/fields/SVMXA360__ProductFamily__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__ProductFamily__c</fullName>
    <description>Template is applicable to this Product Family value.</description>
    <inlineHelpText>Template is applicable to this Product Family value.</inlineHelpText>
    <label>Product Family</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SVMXA360__ProductFamily</valueSetName>
    </valueSet>
</CustomField>