force-app/main/default/objects/SVMXA360__SM_TA_TemplateAssociation__c/fields/SVMXA360__ProductId__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__ProductId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Template is applicable to this Product value.</description>
    <inlineHelpText>Template is applicable to this Product value.</inlineHelpText>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Technical AttributeTemplate Associations</relationshipLabel>
    <relationshipName>TechnicalAttributeTemplateAssociations</relationshipName>
    <type>Lookup</type>
</CustomField>