force-app/main/default/objects/SVMXA360__SM_TA_TemplateAssociation__c/fields/SVMXA360__TemplateId__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__TemplateId__c</fullName>
    <description>Template applicable to this match.</description>
    <inlineHelpText>Template applicable to this match.</inlineHelpText>
    <label>Template</label>
    <referenceTo>SVMXA360__SM_TA_Template__c</referenceTo>
    <relationshipLabel>Template Match Values</relationshipLabel>
    <relationshipName>TechnicalAttributeTemplateAssociations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>